--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 <head>
    
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9DCCNGTG5K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9DCCNGTG5K');
+</script>
+   
     <title>Fiesta Loca</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/style.css">
