--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
      <div class="container">
         <h1>Fiesta Loca</h1>
         <h2>Louez tout le matériel dont vous avez besoin pour votre évènement</h2>
-        <a href="#contact-section"class="btn-blue">Nous contacter</a>       
+        <a href="#contact-section"class="btn-blue"data-gtm-event="open-contact-form">Nous contacter</a>       
      </div>
     </div>
     <div class="container">
